@@ -1,3 +1,13 @@
+Sat Apr  5 23:48:28 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	unittests/compare:
+	* Makefile.in (OUTPUTTYPE): Define as AOF or ELF depending on output
+	fileformat choosen.
+	(OUTPUTELF): Remove definition.
+	* core/instr_b_bl_blx_reloc.s: Use OUTPUTTYPE instead of OUTPUTELF.
+	* core/instr_bx_reloc.s: Likewise.
+	* core/instr_cbz_cbnz.s: Likewise.
+
 Sun Mar 16 15:49:25 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* src/m_cpuctrl.c (GetBranchLabel): Improve support for branches to
